# rtsp

./: README.md
LibRtsp-Live555/: H264Handle.cpp  H264Handle.h  Makefile  live555MediaServer.cpp
PlatformRtspServer/: mysql部署.txt
PlatformRtspServer/PlatformRtspServer/: CMakeLists.txt  Makefile  cert.pem  gss_globle.conf  live555MediaServer.cpp  new.sh  readme.txt  start.sh  time_reset.sh  uid_select.sh
PlatformRtspServer/PlatformRtspServer/include/: ADTSMainStream.hh  DynamicRTSPServer.hh  H264MainStream.hh  H264SubStream.hh  H264VideoLiveDiscreteFramer.hh  PCMUStream.hh  inifile.h  nalu_utils.hh  utils_log.h
PlatformRtspServer/PlatformRtspServer/live555/BasicUsageEnvironment/include/: HandlerSet.hh  MyBasicUsageEnvironment.hh
PlatformRtspServer/PlatformRtspServer/live555/GssLiveConn/include/: GssLiveConn.h  MyuseMysql.h  PublicMysql.h  gss_transport.h  p2p_dispatch.h  p2p_transport.h
PlatformRtspServer/PlatformRtspServer/live555/groupsock/include/: GroupsockHelper.hh  NetCommon.h
PlatformRtspServer/PlatformRtspServer/live555/liveMedia/include/: GenericMediaServer.hh  Media.hh  OnDemandServerMediaSubsession.hh  RTCP.hh  RTSPServer.hh  RTSPServerSupportingHTTPStreaming.hh  ServerMediaSession.hh
PlatformRtspServer/PlatformRtspServer/src/: ADTSMainStream.cpp  DynamicRTSPServer.cpp  H264MainStream.cpp  H264SubStream.cpp  H264VideoLiveDiscreteFramer.cpp  PCMUStream.cpp  inifile.c  nalu_utils.cpp  utils_log.cpp
PlatformRtspServer/PlatformRtspServer/vsproj/: rtsps.sln  rtsps.vcproj
RtspCS/: RtspCS.sln
RtspClient/: AndroidManifest.xml  clear.bat  local.properties  readme.txt  streamuser-Release.vgdbsettings  streamuser.opensdf  streamuser.sln  streamuser.vcxproj  streamuser.vcxproj.filters
RtspServer/: AndroidManifest.xml  RtspServer-Debug.vgdbsettings  RtspServer.sln  (+3 more)
(+425 files in other folders)
